[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Camera/Camera.gd" type="Script" id=1]

[node name="Camera" type="Camera2D"]
process_priority = 3
rotating = true
current = true
smoothing_enabled = true
smoothing_speed = 12.0
drag_margin_left = 0.01
drag_margin_top = 0.1
drag_margin_right = 0.01
drag_margin_bottom = 0.1
editor_draw_drag_margin = true
script = ExtResource( 1 )

[node name="OffsetTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_Camera_tree_exiting"]
[connection signal="tween_all_completed" from="OffsetTween" to="." method="_on_Tween_tween_all_completed"]
